-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 18.0.0
-
None
-
e55181460 (18.0), 305f40572 (18.0)
Just got this crash. I accidentally ran CMake Profiler. A bit later I explicitly triggered "Run CMake" and that crashed Qt Creator:
Thread 0 Crashed: 0 libCtfVisualizer.dylib 0x1198450c8 0x119820000 + 151752 1 libCtfVisualizer.dylib 0x119843de8 0x119820000 + 146920 2 libCtfVisualizer.dylib 0x11985201c 0x119820000 + 204828 3 libCtfVisualizer.dylib 0x1198409f8 0x119820000 + 133624 4 QtCore 0x105215df0 0x105128000 + 974320 5 libUtils.17.0.84.dylib 0x103322768 Utils::AsyncBase::resultReadyAt(int) + 60 6 QtCore 0x105215df0 0x105128000 + 974320 7 QtCore 0x105369d30 0x105128000 + 2366768 8 QtCore 0x1053699f0 QFutureWatcherBase::event(QEvent*) + 28