CtfVisualizer: Fix a crash in CMake Profiler

Don't return reference to string from the m_reusableStrings
set, as it may get invalidated on subsequent insert.
Return copy instead - this is as cheap as ref.

Simplify the implementation as drive in change.

Fixes: QTCREATORBUG-33644
Change-Id: Ic7157b34e61b37bd37c93d5aa37e495e2b8190fe
Reviewed-by: Eike Ziller <eike.ziller@qt.io>